--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,6 +13,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by the champ.</p>
         <img class="champ" src="/img/harish.jpeg" alt="">
 
     </div>
